[gd_scene load_steps=6 format=3 uid="uid://cc6k7bnf7ebg1"]

[ext_resource type="Texture2D" uid="uid://bbd66wv5cpaw4" path="res://World/background.png" id="1_1ofok"]
[ext_resource type="Script" path="res://World/world.gd" id="1_hg0a4"]
[ext_resource type="PackedScene" uid="uid://txxvcriw0mag" path="res://Player/player.tscn" id="2_q8f51"]
[ext_resource type="PackedScene" uid="uid://cv6v62jyq7ojq" path="res://UI/player_ui.tscn" id="5_4kgf1"]
[ext_resource type="PackedScene" uid="uid://ij56ae3mtr2n" path="res://Player/Drawing/Particle/spawn_particle.tscn" id="5_hbcqk"]

[node name="World" type="Node2D"]
script = ExtResource("1_hg0a4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(804.75, 424.5)
scale = Vector2(0.838802, 0.786111)
texture = ExtResource("1_1ofok")

[node name="Player" parent="." instance=ExtResource("2_q8f51")]
position = Vector2(808, 439)

[node name="TimerWaves" type="Timer" parent="."]
one_shot = true

[node name="TimerSpawns" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="spawn_particle" parent="." instance=ExtResource("5_hbcqk")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealth" parent="CanvasLayer" instance=ExtResource("5_4kgf1")]
offset_right = 2.0
offset_bottom = -4.0

[connection signal="timeout" from="TimerWaves" to="." method="_on_timer_waves_timeout"]
[connection signal="timeout" from="TimerSpawns" to="." method="_on_timer_spawns_timeout"]

[editable path="Player"]
[editable path="Player/HurtBox"]
[editable path="CanvasLayer/PlayerHealth"]
